--- a/flask_MPC/templates/MPC_HOME.html
+++ b/flask_MPC/templates/MPC_HOME.html
@@ -29,12 +29,12 @@
     opacity: 0.75;
     }
     </style>
-    <link href="../static/css/carousel.css" rel="stylesheet">
+    <link href="../static/css/MPC_style.css" rel="stylesheet">
 </head>
 <body>
 <header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark this-nav" style="box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.5);">
-    <a class="navbar-brand" href="#">首页</a>
+    <a class="navbar-brand" href="{{ url_for('show_home') }}">首页</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
