--- a/flask_MPC/templates/nav_bar.html
+++ b/flask_MPC/templates/nav_bar.html
@@ -2,19 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="Shen Lin">
-    <meta name="generator" content="Hugo 0.80.0">
-    <title>{{ message }}成功</title>
-    <link rel="icon" type="image/x-icon" href="../static/images/key-fill.svg" />
-    <link rel="canonical" href="https://getbootstrap.com/docs/4.6/examples/carousel/">
+    <title>导航栏</title>
+        <link rel="canonical" href="https://getbootstrap.com/docs/4.6/examples/carousel/">
     <link rel="canonical" href="https://getbootstrap.com/docs/4.6/examples/pricing/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <style>
+        .jumbotron {
+            color:#ffffff;
+            background: linear-gradient(rgba(51,51,51,0.85) 0%, #212121 100%);
+        }
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+
+      }
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+        img {
+    opacity: 0.75;
+    }
+    </style>
     <link href="../static/css/MPC_style.css" rel="stylesheet">
 </head>
 <body>
-<header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark this-nav" style="box-shadow: 0 0.5rem 1rem rgba(0,0,0,0.5);">
     <a class="navbar-brand" href="{{ url_for('show_home') }}">首页</a>
 
@@ -30,8 +47,8 @@
           <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown"
           role="button" aria-haspopup="true" aria-expanded="false">投票发起人 <span class="caret"></span></a>
             <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="{{ url_for('newvote') }}">创建投票</a></li>
-            <li><button class="dropdown-item"  data-toggle="modal" data-target="#reset-modal">重置投票</button></li>
+                <li><a href="{{ url_for('newvote') }}" class="dropdown-item">创建投票</a></li>
+                <li><button class="dropdown-item"  data-toggle="modal" data-target="#reset-modal">重置投票</button></li>
                 <li><button class="dropdown-item"  data-toggle="modal" data-target="#auto-modal">生成模拟数据</button></li>
             </ul>
         </li>
@@ -100,14 +117,6 @@
                     </form>
                 </div>
             </div>
-        </div>
-    </div>
-</header>
-    <div class="jumbotron" >
-        <div class="container bd-lead">
-            <h1 class="font-weight-bold">{{ message }}成功</h1>
-            <hr class="div1">
-            <p><strong>点击</strong><a href="{{ url_for('evoting') }}">这里</a>返回首页</p>
         </div>
     </div>
 </body>
