--- a/flask_MPC/templates/EVOTING_SUM.html
+++ b/flask_MPC/templates/EVOTING_SUM.html
@@ -3,9 +3,8 @@
 <title>本地计票</title>
 {% endblock %}
 {% block css%}
-    <link href="../static/css/fileinput.css" media="all" rel="stylesheet" type="text/css" />
-    <link href="../static/themes/explorer-fas/theme.css" media="all" rel="stylesheet" type="text/css"/>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.1.5/css/fileinput.min.css" integrity="sha512-A/XiYKl0I56Nxg43kogQlAnLUbGRVGcT3J2Ni9b73+blF89rmMJ6qL9iHhPR/vDOsjcylhEoiQfzHzGHS+K/lQ==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.1.5/themes/explorer-fas/theme.css" integrity="sha512-NCdV5g5frM5aFONVbLVCQVNhGOEsYaxM7eYEl1+e8hZ7+clF9uZjKRbIdRPNoealFuQ9CXnbhehEkMqKEMPcYg==" crossorigin="anonymous" />
 {% endblock %}
 {% block main_page %}
 
@@ -43,12 +42,12 @@
 
 {% endblock %}
 {% block js %}
-    <script src="../static/js/plugins/piexif.js" type="text/javascript"></script>
-    <script src="../static/js/plugins/sortable.js" type="text/javascript"></script>
-    <script src="../static/js/fileinput.js" type="text/javascript"></script>
-    <script src="../static/js/locales/zh.js" type="text/javascript"></script>
-    <script src="../static/themes/fas/theme.js" type="text/javascript"></script>
-    <script src="../static/themes/explorer-fas/theme.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.1.5/js/plugins/piexif.min.js" integrity="sha512-rOFfpB1/58CtdhJdLV7Z9r4XcPv46dOngI3bAxgK8SUZEFjVtW4rG7BUu+3L5PxHMh3s52kpE65Cl29skN9rRw==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.1.5/js/plugins/sortable.min.js" integrity="sha512-ELgdXEUQM5x+vB2mycmnSCsiDZWQYXKwlzh9+p+Hff4f5LA+uf0w2pOp3j7UAuSAajxfEzmYZNOOLQuiotrt9Q==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.1.5/js/fileinput.min.js" integrity="sha512-1FvXwt9wkKd29ilILHy0zei6ScE5vdEKqZ6BSW+gmM7mfqC4T4256OmUfFzl1FkaNS3FUQ/Kdzrrs8SD83bCZA==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.1.5/js/locales/zh.js" integrity="sha512-KTPw9/foqRYOL5Hb9dQVTQNVFy9p90wrd0FHrQSYBcxUQKfZv5bPxFmZ0M1BTr5GafWrgnrSEMuQq5ajkCJ+vQ==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.1.5/themes/fas/theme.js" integrity="sha512-5mMA2GCsWkQPbAFbMC6dosLAdUOWUAfsdxPU00ullpBKWPYXExHbnwKPAfOuwoZ2zcF/i9/8wLTd3XUmiTYcEg==" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.1.5/themes/explorer-fa/theme.js" integrity="sha512-TNHkCHrZtoemk0n+pWX/L5BQixPo4VOrhrrn8cUsF98naMNbrtWqIR1RenTKmYiNLJ5pdNx8FNt8DSY2AsrufA==" crossorigin="anonymous"></script>
     <script>
         $("#file-0a").fileinput({
         theme: 'fas',
