--- a/flask_MPC/templates/AI_INDEX.html
+++ b/flask_MPC/templates/AI_INDEX.html
@@ -36,14 +36,14 @@
     </div>
     <div class="card mb-4 shadow-sm">
       <div class="card-header my-0">
-        <h4 style="font-weight: 600 !important;">利用自定义数据进行测试</h4>
+        <h4 style="font-weight: 600 !important;">双方安全验证</h4>
       </div>
       <div class="card-body">
         <h4 class="card-title pricing-card-title"><small >可进行以下操作:</small></h4>
 
           <div class="btn-group-justified list-unstyled mt-3 mb-4" role="group">
-              <a href="{{ url_for('back_test') }}" class="btn btn-outline-primary btn-xl"role="button">进行测试</a>
-              <a href="#" class="btn btn-outline-primary btn-xl"role="button">显示测试结果</a>
+              <a href="{{ url_for('back_test') }}" class="btn btn-outline-primary btn-xl"role="button">后台数据</a>
+              <a href="#" class="btn btn-outline-primary btn-xl"role="button">自定义数据</a>
           </div>
       </div>
     </div>
