--- a/flask_MPC/templates/AI_TEST_BACK.html
+++ b/flask_MPC/templates/AI_TEST_BACK.html
@@ -38,14 +38,16 @@
                         <div class="form-check abc-radio abc-radio-info form-check-inline">
                                     <input class="form-check-input" type="radio" name="radio1" id="radio1" value="option1" checked>
                                     <label class="form-check-label" for="radio1">
-                                        <strong>Paillier算法 </strong>
+                                        <a href="https://www.cae.tntech.edu/~mmahmoud/teaching_files/grad/ECE7970/S16/slides/Homomorphic_basics.pdf">
+                                            <strong>Paillier算法 </strong>
+                                        </a>
                                         <small class="text-muted">具有加同态，不具有乘同态。</small>
                                     </label>
                                 </div>
                                 <div class="form-check abc-radio abc-radio-info form-check-inline">
                                     <input class="form-check-input" type="radio" name="radio1" id="radio2" value="option2">
                                     <label class="form-check-label" for="radio2">
-                                        <a href="https://archive.ics.uci.edu/ml/datasets/heart+disease">
+                                        <a href="https://eprint.iacr.org/2016/421.pdf">
                                             <strong>CKKS算法 </strong>
                                         </a>
                                         <small class="text-muted">同时具有加同态和乘同态（完全同态）。</small>
