--- a/flask_MPC/templates/AI_TRAIN.html
+++ b/flask_MPC/templates/AI_TRAIN.html
@@ -36,7 +36,7 @@
                         <div class="row">
                             <div class="col-sm-8">
                                 <div class="form-check abc-radio abc-radio-info">
-                                    <input class="form-check-input" type="radio" name="radio1" id="radio1" value="breast" checked>
+                                    <input class="form-check-input" type="radio" name="radio1" id="radio1" value="breast_cancer" checked>
                                     <label class="form-check-label" for="radio1">
                                         <a href="https://archive.ics.uci.edu/ml/datasets/Breast+Cancer+Wisconsin+(Diagnostic)">
                                             <strong>UCI乳腺癌诊断数据集：569*30 </strong>
