--- a/flask_MPC/templates/EVOTING_VOTE.html
+++ b/flask_MPC/templates/EVOTING_VOTE.html
@@ -52,7 +52,7 @@
 
 {% endblock %}
 {% block js %}
-
+<!--在前台获取投票人选择并在本地完成分片，将私密选票分片保存到本地-->
 <script>
      var split_vote = new Array();
      var name = "NO";
